<resources>
    <string name="app_name">King of Karaoke</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="com_auth0_client_id">HzIw9RLCTVmrHnrUlfdtXbdvu2miCb8T</string>
    <!--    <string name="com_auth0_client_id">LYIF0vyD7uJAGjcXmOXQPscbJLWnr5yE</string>-->
    <string name="com_auth0_domain">dev-h233pb23qbcqqz4q.us.auth0.com</string>
    <!--    <string name="com_auth0_domain">dev-4ofqjqo2.us.auth0.com</string>-->
    <string name="jsonbin_access_key">$2a$10$LWw40pn3zJxIo2a9VPAsd.FnXo3DouZB1XgTAUdBijdu8EV6jpngq</string>

    <string name="default_user">User</string>
    <string name="login">Login</string>
    <string name="start_the_quiz">Start the Quiz</string>
    <string name="top_10_scores">Top 10 Scores</string>
    <string name="your_high_score">Your High-score</string>
    <string name="score">Score:</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="hint_used">Hint Used:</string>
    <string name="time_left">Time Left:</string>
    <string name="place_holder">---</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="remain_time">Remain Time</string>
    <string name="hint">hint</string>
    <string name="quiz">Quiz</string>
    <string name="offline">Offline</string>
    <string name="quiz_finished">Quiz Finished</string>
    <string name="back">Back to Main</string>
    <string name="start_again">Start Again</string>
    <string name="your_score">Your Score</string>
    <string name="your_old_high_score">Your Old High-score</string>
    <string name="congrats">Congrats</string>
</resources>