<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_TopScorer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:paddingVertical="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="48sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_img_logout"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/main_text_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"

                android:bottom="@+id/main_user_icon"
                android:text="@string/default_user"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/main_button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_the_quiz" />

    <ProgressBar
        android:id="@+id/main_loading_questions"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp" />

    <ProgressBar
        android:id="@+id/main_progress_questions"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/your_high_score"
        android:textSize="28sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:paddingHorizontal="8dp"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:paddingHorizontal="8dp"
            android:text="@string/correct_answers"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:paddingHorizontal="8dp"
            android:text="@string/hint_used"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:paddingHorizontal="8dp"
            android:text="@string/time_left"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/main_text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="end"
            android:paddingHorizontal="8dp"
            android:text="@string/place_holder"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/main_text_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="end"
            android:paddingHorizontal="8dp"
            android:text="@string/place_holder"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/main_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="end"
            android:paddingHorizontal="8dp"
            android:text="@string/place_holder"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/main_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="end"
            android:paddingHorizontal="8dp"
            android:text="@string/place_holder"
            android:textSize="20sp" />

    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/top_10_scores"
        android:textSize="28sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_list_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>