<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal"
            android:paddingHorizontal="64dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/quiz"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/quiz_text_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="32sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/quiz_progress_timer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/quiz_seek_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/quiz_text_sound"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quiz_button_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/start" />

            <Button
                android:id="@+id/quiz_button_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/pause" />

            <Button
                android:id="@+id/quiz_button_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/quiz_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/quiz_button_prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/previous" />

            <Button
                android:id="@+id/quiz_button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/next" />

            <Button
                android:id="@+id/quiz_button_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:text="@string/submit" />

        </GridLayout>


    </LinearLayout>

</ScrollView>