<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="16dp"
            android:text="@string/quiz_finished"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="48sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/congrats"
            android:src="@mipmap/congrats" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            android:text="@string/your_score"
            android:textSize="28sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/score"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/correct_answers"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/hint_used"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/time_left"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            android:text="@string/your_old_high_score"
            android:textSize="28sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/score"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/correct_answers"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/hint_used"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:paddingHorizontal="8dp"
                android:text="@string/time_left"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_max_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_max_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_max_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score_text_max_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                android:text="@string/place_holder"
                android:textSize="20sp" />

        </GridLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/score_button_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_again" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/score_button_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>